styles/globals.css
#progress .indicator {
  stroke: #fafafa;
  margin-top: 100px;
}

::-webkit-scrollbar {
  height: 5px;
  width: 5px;
  background: #cbd5e0;
  -webkit-border-radius: 1ex;
  -webkit-appearance: none;
  border-radius: 1ex;
}

::-webkit-scrollbar-thumb {
  background: #2c3d55;
  -webkit-border-radius: 1ex;
  border-radius: 1ex;
}

::-webkit-scrollbar-corner {
  background: #fff3;
}

